--- a/GradienBoostingScore.ipynb
+++ b/GradienBoostingScore.ipynb
@@ -22,7 +22,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(176, 21)\n"
+      "(224, 21)\n"
      ]
     },
     {
@@ -196,12 +196,12 @@
        "</div>"
       ],
       "text/plain": [
-       "    Team  Week  Result  Rec  Home                   Opp  TmScore  OppScore  \\\n",
-       "0  Bills     1       1  1-0     1         Chicago Bears     34.0      14.0   \n",
-       "1  Bills     2       1  2-0     0    Indianapolis Colts     27.0      24.0   \n",
-       "2  Bills     3       1  3-0     1  Tampa Bay Buccaneers     34.0      24.0   \n",
-       "3  Bills     4       0  3-1     1     Arizona Cardinals     20.0      37.0   \n",
-       "4  Bills     5       1  4-1     0      Seattle Seahawks     26.0      17.0   \n",
+       "    Team  Week Result  Rec  Home                   Opp  TmScore  OppScore  \\\n",
+       "0  Bills     1      1  1-0     1         Chicago Bears     34.0      14.0   \n",
+       "1  Bills     2      1  2-0     0    Indianapolis Colts     27.0      24.0   \n",
+       "2  Bills     3      1  3-0     1  Tampa Bay Buccaneers     34.0      24.0   \n",
+       "3  Bills     4      0  3-1     1     Arizona Cardinals     20.0      37.0   \n",
+       "4  Bills     5      1  4-1     0      Seattle Seahawks     26.0      17.0   \n",
        "\n",
        "   O_1stD  O_Tot_yd  ...  O_R_Yd  O_TO  D_1stD  D_Tot_Yd  D_P_Yd  D_R_Yd  \\\n",
        "0    18.0     386.0  ...    74.0   1.0    24.0     322.0   188.0   134.0   \n",
@@ -309,15 +309,15 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>34.0</td>\n",
-       "      <td>-0.819070</td>\n",
-       "      <td>0.137778</td>\n",
-       "      <td>0.685863</td>\n",
-       "      <td>-0.921875</td>\n",
-       "      <td>-0.648313</td>\n",
-       "      <td>0.856466</td>\n",
-       "      <td>-0.163092</td>\n",
-       "      <td>-0.587649</td>\n",
-       "      <td>0.645454</td>\n",
+       "      <td>-0.762952</td>\n",
+       "      <td>0.208713</td>\n",
+       "      <td>0.739647</td>\n",
+       "      <td>-0.863009</td>\n",
+       "      <td>-0.655336</td>\n",
+       "      <td>0.856943</td>\n",
+       "      <td>-0.162220</td>\n",
+       "      <td>-0.528247</td>\n",
+       "      <td>0.560785</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -333,15 +333,15 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>27.0</td>\n",
-       "      <td>-0.184951</td>\n",
-       "      <td>-0.061310</td>\n",
-       "      <td>0.160920</td>\n",
-       "      <td>-0.362464</td>\n",
-       "      <td>0.492718</td>\n",
-       "      <td>0.435997</td>\n",
-       "      <td>0.233170</td>\n",
-       "      <td>0.184391</td>\n",
-       "      <td>0.111419</td>\n",
+       "      <td>-0.108993</td>\n",
+       "      <td>0.010164</td>\n",
+       "      <td>0.195539</td>\n",
+       "      <td>-0.299168</td>\n",
+       "      <td>0.465238</td>\n",
+       "      <td>0.436910</td>\n",
+       "      <td>0.236406</td>\n",
+       "      <td>0.231372</td>\n",
+       "      <td>0.034050</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -357,15 +357,15 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>34.0</td>\n",
-       "      <td>0.026422</td>\n",
-       "      <td>0.416501</td>\n",
-       "      <td>0.923337</td>\n",
-       "      <td>-0.880437</td>\n",
-       "      <td>-0.648313</td>\n",
-       "      <td>1.487169</td>\n",
-       "      <td>1.372423</td>\n",
-       "      <td>2.432786</td>\n",
-       "      <td>-1.469323</td>\n",
+       "      <td>0.108993</td>\n",
+       "      <td>0.486681</td>\n",
+       "      <td>0.985791</td>\n",
+       "      <td>-0.821243</td>\n",
+       "      <td>-0.655336</td>\n",
+       "      <td>1.486994</td>\n",
+       "      <td>1.382454</td>\n",
+       "      <td>2.443594</td>\n",
+       "      <td>-1.525087</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -381,15 +381,15 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>20.0</td>\n",
-       "      <td>0.449168</td>\n",
-       "      <td>0.336866</td>\n",
-       "      <td>0.285906</td>\n",
-       "      <td>0.051915</td>\n",
-       "      <td>0.492718</td>\n",
-       "      <td>1.487169</td>\n",
-       "      <td>1.607704</td>\n",
-       "      <td>0.238569</td>\n",
-       "      <td>2.397087</td>\n",
+       "      <td>0.544966</td>\n",
+       "      <td>0.407262</td>\n",
+       "      <td>0.325088</td>\n",
+       "      <td>0.118492</td>\n",
+       "      <td>0.465238</td>\n",
+       "      <td>1.486994</td>\n",
+       "      <td>1.619138</td>\n",
+       "      <td>0.284678</td>\n",
+       "      <td>2.288477</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -405,15 +405,15 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>26.0</td>\n",
-       "      <td>0.449168</td>\n",
-       "      <td>1.332306</td>\n",
-       "      <td>1.260800</td>\n",
-       "      <td>-0.010242</td>\n",
-       "      <td>-0.648313</td>\n",
-       "      <td>0.435997</td>\n",
-       "      <td>0.233170</td>\n",
-       "      <td>0.414648</td>\n",
-       "      <td>-0.251724</td>\n",
+       "      <td>0.544966</td>\n",
+       "      <td>1.400007</td>\n",
+       "      <td>1.335575</td>\n",
+       "      <td>0.055843</td>\n",
+       "      <td>-0.655336</td>\n",
+       "      <td>0.436910</td>\n",
+       "      <td>0.236406</td>\n",
+       "      <td>0.457925</td>\n",
+       "      <td>-0.324130</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -428,23 +428,23 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 55 columns</p>\n",
+       "<p>5 rows × 58 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "   TmScore    O_1stD  O_Tot_yd    O_P_Yd    O_R_Yd      O_TO    D_1stD  \\\n",
-       "0     34.0 -0.819070  0.137778  0.685863 -0.921875 -0.648313  0.856466   \n",
-       "1     27.0 -0.184951 -0.061310  0.160920 -0.362464  0.492718  0.435997   \n",
-       "2     34.0  0.026422  0.416501  0.923337 -0.880437 -0.648313  1.487169   \n",
-       "3     20.0  0.449168  0.336866  0.285906  0.051915  0.492718  1.487169   \n",
-       "4     26.0  0.449168  1.332306  1.260800 -0.010242 -0.648313  0.435997   \n",
+       "0     34.0 -0.762952  0.208713  0.739647 -0.863009 -0.655336  0.856943   \n",
+       "1     27.0 -0.108993  0.010164  0.195539 -0.299168  0.465238  0.436910   \n",
+       "2     34.0  0.108993  0.486681  0.985791 -0.821243 -0.655336  1.486994   \n",
+       "3     20.0  0.544966  0.407262  0.325088  0.118492  0.465238  1.486994   \n",
+       "4     26.0  0.544966  1.400007  1.335575  0.055843 -0.655336  0.436910   \n",
        "\n",
        "   D_Tot_Yd    D_P_Yd    D_R_Yd  ...  Opp_New Orleans Saints  \\\n",
-       "0 -0.163092 -0.587649  0.645454  ...                       0   \n",
-       "1  0.233170  0.184391  0.111419  ...                       0   \n",
-       "2  1.372423  2.432786 -1.469323  ...                       0   \n",
-       "3  1.607704  0.238569  2.397087  ...                       0   \n",
-       "4  0.233170  0.414648 -0.251724  ...                       0   \n",
+       "0 -0.162220 -0.528247  0.560785  ...                       0   \n",
+       "1  0.236406  0.231372  0.034050  ...                       0   \n",
+       "2  1.382454  2.443594 -1.525087  ...                       0   \n",
+       "3  1.619138  0.284678  2.288477  ...                       0   \n",
+       "4  0.236406  0.457925 -0.324130  ...                       0   \n",
        "\n",
        "   Opp_New York Giants  Opp_New York Jets  Opp_Philadelphia Eagles  \\\n",
        "0                    0                  0                        0   \n",
@@ -474,7 +474,7 @@
        "3                             0  \n",
        "4                             0  \n",
        "\n",
-       "[5 rows x 55 columns]"
+       "[5 rows x 58 columns]"
       ]
      },
      "execution_count": 3,
@@ -539,7 +539,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.814000872272564\n"
+      "4.193065705289082\n"
      ]
     }
    ],
@@ -644,8 +644,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(158, 1)\n",
-      "(18, 1)\n"
+      "(201, 1)\n",
+      "(23, 1)\n"
      ]
     }
    ],
@@ -667,8 +667,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/xn/d9p0xm1s6qsf6_xczswgw90h0000gn/T/ipykernel_50820/1784227744.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mscore\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwinner\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mScore_Predictor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Rams'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Patriots'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/var/folders/xn/d9p0xm1s6qsf6_xczswgw90h0000gn/T/ipykernel_50820/1926481413.py\u001b[0m in \u001b[0;36mScore_Predictor\u001b[0;34m(home_team, away_team)\u001b[0m\n\u001b[1;32m     48\u001b[0m     \u001b[0mX_Playoff_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mteam1_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mteam2_test\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 50\u001b[0;31m     \u001b[0mscores\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGB_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_Playoff_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     51\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mteam1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"will score\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mteam2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"will score\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/xn/d9p0xm1s6qsf6_xczswgw90h0000gn/T/ipykernel_62621/2440567488.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mscores\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwinner\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mScore_Predictor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Rams'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Patriots'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/var/folders/xn/d9p0xm1s6qsf6_xczswgw90h0000gn/T/ipykernel_62621/1926481413.py\u001b[0m in \u001b[0;36mScore_Predictor\u001b[0;34m(home_team, away_team)\u001b[0m\n\u001b[1;32m     48\u001b[0m     \u001b[0mX_Playoff_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mteam1_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mteam2_test\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 50\u001b[0;31m     \u001b[0mscores\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGB_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_Playoff_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     51\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mteam1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"will score\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mteam2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"will score\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/opt/anaconda3/envs/dev/lib/python3.7/site-packages/sklearn/ensemble/_gb.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m   1607\u001b[0m             \u001b[0mThe\u001b[0m \u001b[0mpredicted\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1608\u001b[0m         \"\"\"\n\u001b[0;32m-> 1609\u001b[0;31m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mDTYPE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"C\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccept_sparse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'csr'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1610\u001b[0m         \u001b[0;31m# In regression we can directly return the raw value from the trees.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1611\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_raw_predict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/opt/anaconda3/envs/dev/lib/python3.7/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36minner_f\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     71\u001b[0m                           FutureWarning)\n\u001b[1;32m     72\u001b[0m         \u001b[0mkwargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0marg\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marg\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 73\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     74\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0minner_f\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/opt/anaconda3/envs/dev/lib/python3.7/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, estimator)\u001b[0m\n\u001b[1;32m    644\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mforce_all_finite\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    645\u001b[0m             _assert_all_finite(array,\n\u001b[0;32m--> 646\u001b[0;31m                                allow_nan=force_all_finite == 'allow-nan')\n\u001b[0m\u001b[1;32m    647\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    648\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mensure_min_samples\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
